# Instalker

./: .env-example  .env.example  .gitignore  .pre-commit-config.yaml  README.md  classes.py  cli.py  constants.py  example.py  main.py  models.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  code-quality.yml
models/: Instagram.py  MyRateController.py
src/: __init__.py  constants.py  logger_config.py
src/classes/: image_manager.py  instagram.py  rate_controller.py
src/config/: settings.py
src/core/: __init__.py  db.py  file_manager.py  image_manager.py  import_users.py  instagram.py  rate_controller.py
src/instalker.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/utils/: __init__.py  import_users.py  logger.py  settings.py  startup_tasks.py
tests/: test_cli.py  test_db.py  test_instagram.py
utils/: constants.py  functions.py
