[project]
name = "instalker"
version = "0.1.0"
description = "Download profiles on Instagram"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["instaloader>=4.14.1", "pillow>=11.1.0", "tqdm>=4.67.1"]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pre-commit>=4.2.0",
    "pylint>=3.3.6",
    "ruff>=0.11.5",
    "types-pillow>=10.2.0.20240822",
    "types-tqdm>=4.67.0.20241221",
]

[tool.ruff]
line-length = 88
lint.select = ["A", "B", "C", "E", "F", "W", "I", "N", "UP", "RUF"]

[tool.mypy]
strict = true
